--- a/src/page/home.page
+++ b/src/page/home.page
@@ -57,6 +57,7 @@
   line-height: 30px;
   color: #4f4f4f;
   font-weight: bold;
+  text-align: justify;
 }
 .head {
   background-image: url('@&spot.png&');
@@ -99,7 +100,7 @@ footer[template="copyright"] {
   top: 22%;
   width: 100%;
   height: 25%;
-  background-position: top;
+  background-position: top right;
   z-index: -1;
   background-repeat: no-repeat;
 }
