--- a/src/page/home.page
+++ b/src/page/home.page
@@ -1,8 +1,13 @@
 <template>
 <div class="home">
   <temple name="topBar" logo="http://www.people.com.cn/img/2016people/images/rmw_logo.png"  src="https://owo.ink/public/2259616cc09d409ddece5662234b817e.page"></temple>
-  <div class="bg-box"></div>
-  <div class="head">
+  <!-- 第一页 -->
+  <div class="bg-box page">
+    <!-- 手机版才会有内容 -->
+    <img src="@&home-min.png&" />
+  </div>
+  <!-- 第二页 -->
+  <div class="head page">
     <div class="w1160">
       <!-- 编者按 -->
       <temple name="editor" src="./src/module/editor.owo"></temple>
@@ -12,11 +17,16 @@
       <p class="subtitle">《地方领导留言版》创办12年来，不断帮助各省，市党征领导干部和县委书记倾听网民心声，了解群众困难，吸纳百姓建议。各地领导干部通过人民网《地方留言版》答复网友留言超过100万件。</p>
     </div>
   </div>
-  
+  <!-- 第三页 -->
+  <div class="page page-3">
+    <div class="content-box w1160">
+      <temple name="imageTitle" imgSrc="@&title.png&"  src="https://owo.ink/public/d55fa9be971e070192ccdd1ffc25a117.page"></temple>
+      <temple name="swiperCard"  src="./src/module/swiperCard.owo"></temple>
+      <temple name="swiperCard2"  src="./src/module/swiperCard2.owo"></temple>
+    </div>
+  </div>
+  <!-- 第四页 -->
   <div class="content-box w1160">
-    <temple name="imageTitle" imgSrc="@&title.png&"  src="https://owo.ink/public/d55fa9be971e070192ccdd1ffc25a117.page"></temple>
-    <temple name="swiperCard"  src="./src/module/swiperCard.owo"></temple>
-    <temple name="swiperCard2"  src="./src/module/swiperCard2.owo"></temple>
     <temple name="imageTitle" imgSrc="@&title2.png&"  src="https://owo.ink/public/d55fa9be971e070192ccdd1ffc25a117.page"></temple>
     <temple name="3d-swiper"  src="https://owo.ink/public/9099823707ade3856e855fa8a9c59b0f.page"></temple>
     <temple name="imageTitle" imgSrc="@&title3.png&"  src="https://owo.ink/public/d55fa9be971e070192ccdd1ffc25a117.page"></temple>
@@ -48,6 +58,10 @@
   background-repeat: no-repeat;
   background-size: 100%;
   background-position: center top;
+  position: relative;
+  img {
+    display: none;
+  }
 }
 .editor-note {
   margin-bottom: 20px;
