--- a/src/page/home.page
+++ b/src/page/home.page
@@ -22,6 +22,10 @@
     <div class="content-box w1160">
       <temple name="imageTitle" imgSrc="@&title.png&"  src="https://owo.ink/public/d55fa9be971e070192ccdd1ffc25a117.page"></temple>
       <temple name="swiperCard"  src="./src/module/swiperCard.owo"></temple>
+    </div>
+  </div>
+  <div class="page page-3-2">
+    <div class="content-box w1160">
       <temple name="swiperCard2"  src="./src/module/swiperCard2.owo"></temple>
     </div>
   </div>
@@ -47,11 +51,10 @@
         <temple name="list" class="left-news news"  src="https://owo.ink/public/9d65b02ceaf5c7938c4c0a5531777e93.page"></temple>
         <temple name="list" class="news" src="https://owo.ink/public/9d65b02ceaf5c7938c4c0a5531777e93.page"></temple>
       </div>
+      <temple name="footer"  src="https://owo.ink/public/6058c6a5ed9add6317483f957740938c.page"></temple>
+      <temple name="copyright"  src="https://owo.ink/public/f94894ed060f2de25b4cb1ea7cab716d.page"></temple>
     </div>
   </div>
-  
-  <temple name="footer"  src="https://owo.ink/public/6058c6a5ed9add6317483f957740938c.page"></temple>
-  <temple name="copyright"  src="https://owo.ink/public/f94894ed060f2de25b4cb1ea7cab716d.page"></temple>
   <!-- 底部背景图 -->
   <div class="bottom-bg"></div>
   <!-- 中间背景图 -->
@@ -66,7 +69,7 @@
   margin: 0 auto;
 }
 .bg-box {
-  height: 500px;
+  height: 450px;
   background-image: url('@&bg.jpg&');
   background-repeat: no-repeat;
   background-size: 100%;
@@ -77,7 +80,7 @@
   }
 }
 .editor-note {
-  margin-bottom: 20px;
+  padding: 20px 0;
 }
 .subtitle {
   font-size: 16px;
